--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
-    <title>Document</title>
+    <title>Portafolio Leonardo</title>
 </head>
 <body>
     <header id="Inicio">
