--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
                 <div class="contenedor-trabajos">
                     <div class="trabajo">
                         <div class="thumb">
-                            <img src="img/trabajos/1.jpg" alt="Descripcion de imagen">
+                            <a href="/index2.html>"<img src="img/logo-mallorca-atb.png" alt="Obligatorio"></a>
                         </div>
                         <div class="descripcion">
                             <p class="nombre">
-                                Descripcion 1
+                                Obligatorio.
                             </p>
                             <p class="categoria">
-                                html-css-php
+                                Html 5- Css 3-No responsive.
                             </p>
                         </div>
                     </div>
