--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="contenedor-trabajos">
                     <div class="trabajo">
                         <div class="thumb">
-                            <a href="/index2.html>"<img src="img/logo-mallorca-atb.png" alt="Obligatorio"></a>
+                            <a href="/index2.html"><img src="img/logo-mallorca-atb.png" alt="Obligatorio"></a>
                         </div>
                         <div class="descripcion">
                             <p class="nombre">
