Update to 'about me'

--- a/index.html
+++ b/index.html
@@ -61,10 +61,14 @@
 
             <div class="texto">
 
-                <h3 id="Acerca" class="titulo">Acerca de</h3>
+                <h3 id="Acerca" class="titulo">About me:</h3>
 
-                <p>Lorem <span class="bold">photoshop Ipsum is simply</span> dummy text of the printing and typesetting industry. Lorem Ipsum has 
-                    been the industry's standard <span class="bold"> dummy text ever since</span> the 1500s, </p>
+                <p>I am a Programmer Analyst student at ORT university,
+interested in building my career in the IT field, and improve
+as a person and a professional, with EMT's degree in
+computing maintenance and processing at the I.T.I. and
+with courses completed as Jovenes a Programar (Plan
+Ceibal) and on online platforms such as Udemy.</p>
 
             </div>
             
