Cambio de imagen de Obligatorio.

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Ceibal) and on online platforms such as Udemy.</p>
                 <div class="contenedor-trabajos">
                     <div class="trabajo">
                         <div class="thumb">
-                            <a href="index2.html"><img src="img/logo-mallorca-atb.png" alt="Obligatorio"></a>
+                            <a href="index2.html"><img src="img/logo-mallorca-2.jpg" alt="Obligatorio"></a>
                         </div>
                         <div class="descripcion">
                             <p class="nombre">
