Update GitHub link.

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ Ceibal) and on online platforms such as Udemy.</p>
                <a class="youtube" href="https://www.youtube.com/channel/UCnHnsV2IU96pZc1vdTr1r6A" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
                <a class="twitter" href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                <a class="instagram" href="https://www.instagram.com/leo_sketch_91/?hl=es" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-               <a class="github" href="#"><i class="fa fa-github" aria-hidden="true"></i></a>
+               <a class="github" href="https://github.com/GitLeoSketch"><i class="fa fa-github" aria-hidden="true"></i></a>
 
            </div>
 
